tools/data-handler/test/test-data/invalid/missing-cardroot/.cards/local/workflows/.schema
{
    "id": "workflow-schema",
    "version": 1
}